--- a/big basket clone/bigbasket.css
+++ b/big basket clone/bigbasket.css
@@ -5,7 +5,7 @@ body{
     color: #333;
     padding: 30px;
     height: 100vh;  
-    align-items: centre;
+    align-items: center;
 }
 .bigbasket {
     display: flex;
@@ -28,15 +28,25 @@ body{
     top: 50%;
     left: 12px;
 } 
-.search-bar{
+.search-bar {
+  display: flex;                         
+  align-items: center;                  
   border: 2px solid rgb(150, 146, 146);
   border-radius: 8px;
-  height: 30px;
+  padding: 0 10px;
+  height: 35px;
+  background-color: white;
 }
-.search-input{
-  border:none;
-  position: relative;
-  top: 5px
+
+.search-bar i {
+  margin-right: 8px;                     
+  color: gray;
+}
+
+.search-input {
+  border: none;
+  outline: none;
+  font-size: 14px;
 }
 
 .login{
